# blackhole

./: .clang-format  .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.bat  build.rs  compile_flags.txt
.github/workflows/: build.yml  rust.yml
src/: blackhole.rs  linux.rs  logs.rs  macos.rs  main.rs  settings.rs  show.rs  windows.rs
src/assets/: launchd.plist
src/ops/: init.rs  mod.rs  purge.rs
src/os/: macos.m  macos.rs  windows.rs
src/sys/: mod.rs
wix/: License.rtf  main.wxs
