[package]
name = "blackhole"
version = "4.0.1"
authors = ["William Venner <william@venner.io>"]
edition = "2018"
repository = "https://github.com/WilliamVenner/blackhole"
license = "MIT"
keywords = ["blackhole", "black hole", "forget", "ramdisk", "organization", "organisation", "organisation-tool", "organization-tool", "black-hole"]
description = "Semi-temporary directory for not-so-organized organized people"

[package.metadata.bundle]
name = "Blackhole"
identifier = "com.venner.blackhole"
icon = ["src/assets/blackhole.ico"]

[features]
gui = ["msgbox", "opener"]

[profile.release]
debug = true

[dependencies]
dirs = "3.0"
trash = "1.2"
fs_extra = "1.2"
msgbox = { version = "0.6.0", optional = true }
opener = { version = "0.4.1", optional = true }
backtrace = "0.3"

[target.'cfg(target_os="macos")'.dependencies]
embed_plist = "1.2"
cocoa = "0.24.0"
objc = { version = "0.2.7", features = ["exception"] }

[target.'cfg(target_os="windows")'.dependencies]
powershell_script = "0.1"
winapi = { version = "0.3", features = ["winuser"] }
rust-ini = "0.16"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"