[package]
name = "blackhole"
version = "2.0.0"
edition = "2021"

[dependencies]
dirs = "5"
trash = "1.2"
opener = "0.6"
log = "0.4"
env_logger = "0.9"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
build_cfg = "1"
winres = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
	"Win32",
	"Win32_Foundation",
	"Win32_Storage_FileSystem",
	"Win32_Storage",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Shell",
	"Win32_System_Threading",
	"Win32_System",
] }
rust-ini = "0.20"
