[package]
name = "blackhole"
version = "5.0.0"
authors = ["William Venner <william@venner.io>"]
edition = "2021"
repository = "https://github.com/WilliamVenner/blackhole"
license = "MIT"
keywords = [
	"blackhole",
	"black hole",
	"forget",
	"ramdisk",
	"organization",
	"organisation",
	"organisation-tool",
	"organization-tool",
	"black-hole",
]
description = "Semi-temporary directory for not-so-organized organized people"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"

[package.metadata.bundle]
name = "Blackhole"
identifier = "com.venner.blackhole"
icon = ["assets/blackhole.ico"]

[dependencies]
dirs = "5"
trash = "1.2"
opener = "0.6"
log = "0.4"
env_logger = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[build-dependencies]
build_cfg = "1"
winres = "0.1"
cc = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
	"Win32",
	"Win32_Foundation",
	"Win32_Storage_FileSystem",
	"Win32_Storage",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Shell",
	"Win32_System_Threading",
	"Win32_System",
] }
rust-ini = "0.20"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
embed_plist = "1"
quick-xml = "0.31"
